# suite-local-ai

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.claude/: FIGMA_QUICK_REFERENCE.md  FIGMA_SETUP.md  README.md  figma-skill.md  settings.json
.github/workflows/: ci.yml  deploy.yml  desktop-build.yml  docker-build.yml
agent/: .env.example  README.md  deploy.py  pyproject.toml
agent/finance_agent/: agent.py  prompts.py  tools.py
apps/admin/: package.json
apps/api/: .env.example  DEPLOY.md  package.json  tsconfig.json
apps/api/src/: app.module.ts  main.ts
apps/desktop/: .env.example  package.json  tsconfig.json
apps/desktop/electron/: audit.ts  main.ts  preload.ts  qvac.ts
apps/landing/: .env.example  next.config.ts  package.json  tsconfig.json
apps/landing/app/: globals.css
apps/web/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
apps/web/app/: globals.css  layout.tsx
apps/web/components/: AddClientModal.tsx  AddTransactionModal.tsx  AiAssistant.tsx  DeleteModal.tsx  FileUploadModal.tsx  FilterDropdown.tsx  Header.tsx  NotificationsDrawer.tsx  Pagination.tsx  ProjectList.tsx  ProjectPipeline.tsx  RecordPaymentModal.tsx  RevenueChart.tsx  RightPanel.tsx  ShareProjectModal.tsx  Sidebar.tsx  SidebarContext.tsx  SortDropdown.tsx  StatsCard.tsx  StatsCards.tsx  (+5 more)
infra/docker/: Dockerfile.admin  Dockerfile.api  Dockerfile.landing  Dockerfile.web
infra/nginx/: nginx.conf
infra/supabase/: kong.yml
scripts/: postinstall-build.mjs
(+110 files in other folders)
