[project]
name = "cloudstech-finance-agent"
version = "0.1.0"
description = "Cloudstech Finance Operations Agent (Vertex ADK + Gemini)"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=0.3.0",
    "google-cloud-aiplatform[agent_engines]>=1.70.0",
    "google-cloud-bigquery>=3.25.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
packages = ["finance_agent"]
